--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -42,6 +42,9 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <% if current_user == @team.owner %>
+                        <td><%= link_to '権限移動', update_owner_team_path(@team, assign_user_id: assign.user_id), method: :put, class: 'btn btn-sm btn-info' %></td>
+                      <% end %>
                     </tr>
                   <% end %>
                 </tbody>
